# gigaml

./: .dev.env  .dockerignore  .gitignore  .mypy.ini  API_DOCUMENTATION.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1e1206a39ba2_init.py  32bfc3f339a5_fixing.py  485ccd641423_initial.py  526165949c5e_fixed_enums.py  68a14436e562_.py  8ca3a9b1311b_fixed_enums.py  9655bcdbffe2_migrating_to_postgres.py  a06d4a679257_added_refresh_token.py  c0cd2b7202e7_initial_migration.py  ccc0060a7087_initial_migration.py  e8cb82f44163_add_is_deleted_to_tasks.py
app/cache/: accessor.py
app/core/: auth.py  authz.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py  permissions.py  redis.py  settings.py
app/domain/: __init__.py  task.py  user.py
app/handlers/: __init__.py  auth.py  dependencies.py  ping.py  tasks.py
app/models/: __init__.py  base.py  category.py  task.py  user.py
app/repository/: __init__.py  category.py  repository.py  task.py  user.py  user_repository.py
app/schemas/: __init__.py  auth.py  category.py  jwt.py  task.py  token.py  user.py
app/security/: auth.py
app/service/: __init__.py  task.py  user.py  user_service.py
app/utils/: cache.py  database.py
config/linters/: .flake8  .pylintrc
config/nginx/: nginx.conf
frontend/: Dockerfile  create-task.html  index.html  login.html  nginx.conf  register.html  script.js  styles.css  tasks.html
frontend/css/: styles.css
frontend/js/: auth.js  tasks.js
frontend/scripts/: api.js  auth.js  tasks.js
handlers/: tasks.py
tests/: fixtures.py  test_task_handlers.py  test_task_models.py  test_task_repository.py  test_task_service.py
